# duckdb-101

./: README.md  main.py  pyproject.toml  requirements.txt
cohorts-in-duckdb/: 01_first_purchase_per_user.sql  02_label_every_purchase.sql  03-retention_by_active_purchasers.sql  (+9 more)
duckdb-101/: duckdb-postgres-plugin.md  pyproject.toml
duckdb-101/game-rank-eg/: generate_leaderboard_data.py
duckdb-iceberg-local-analytics-stack/: .gitignore  README.md  main.py  pyproject.toml
duckdb-iceberg-local-analytics-stack/app/: __init__.py  analytics.py  catalog.py  config.py  data_generator.py  pipeline.py  process_incremental_data.py  repository.py  services.py  utils.py
duckdb-iceberg-local-analytics-stack/duckdb_iceberg_local_analytics_stack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
duckdb-iceberg-local-analytics-stack/sql/: customers.sql  gold_customer_summary.sql  growth.sql  retention.sql  revenue.sql  silver_orders.sql
duckdb-iceberg-local-analytics-stack/warehouse/bronze/customers/: customers.parquet
duckdb-iceberg-local-analytics-stack/warehouse/bronze/orders/: generated-001.parquet  generated-002.parquet  generated-003.parquet  generated-004.parquet  generated-005.parquet
duckdb-iceberg-local-analytics-stack/warehouse/gold/: customer_summary.parquet  daily_revenue.parquet  monthly_growth.parquet
duckdb-iceberg-local-analytics-stack/warehouse/silver/: customers.parquet  orders.parquet
duckdb-sql-agents/: .gitignore  README.md  generate_data.py  main.py  pyproject.toml  query.sql
duckdb-sql-agents/data/: order_items.parquet  orders.parquet  products.parquet  refunds.parquet
(+92 files in other folders)
