[project]
name = "duckdb-101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.4.3",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "seaborn>=0.13.2",
    "pyarrow>=10.0.1",
    "faker>=39.0.0",
]
